force-app/main/default/objects/Dano_student_c__x/Dano_student_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>AwishkarOrg</externalDataSource>
    <externalName>Dano__student__c</externalName>
    <label>Student</label>
    <pluralLabel>Students</pluralLabel>
</CustomObject>