force-app/main/default/objects/Dano_student_c__x/fields/Dano_intial_fee_c__c.field-meta.xml
<CustomField>
    <fullName>Dano_intial_fee_c__c</fullName>
    <externalDeveloperName>Dano__intial_fee__c</externalDeveloperName>
    <label>intial fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>