force-app/main/default/objects/Dano_student_c__x/fields/Dano_total_fee_c__c.field-meta.xml
<CustomField>
    <fullName>Dano_total_fee_c__c</fullName>
    <externalDeveloperName>Dano__total_fee__c</externalDeveloperName>
    <label>total fee</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>2</scale>
    <type>Number</type>
</CustomField>